--- a/gold/index.html
+++ b/gold/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Interactive Image Applet -->
-<!-- 2021 Brandon Ingli -->
-<!-- https://portfolio.brandoningli.com -->
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <title>Gold vs Silver Debate</title>
+    <title>Gold vs Silver Debate | Louis Houck | MO Traveling Trunk</title>
 </head>
 
 <body>
