--- a/compass/pop_boom.html
+++ b/compass/pop_boom.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
+    <link rel="shortcut icon" href="../road.png" type="image/png">
     <title>Immigration: Population Boom | Louis Houck | MO Traveling Trunk</title>
 </head>
 
