--- a/compass/index.html
+++ b/compass/index.html
@@ -19,8 +19,8 @@
             <a href="labor.html"><div class="button">Part 2: Labor for the Railroad</div></a>
         </div>
         <div class="buttonGroup center">
-            <div class="button">Activity 1</div>
-            <div class="button">Activity 2</div>
+            <a href="https://thewordsearch.com/puzzle/2254164/immigration-and-the-railroad/" target="_blank" rel="nofollow noreferrer noopener"><div class="button">Activity 1</div></a>
+            <a href="act2.html"><div class="button">Activity 2</div></a>
             <a href="https://www.flexiquiz.com/SC/N/252f0097-d213-4099-b9cb-3f7ab61f0054" target="_blank" rel="nofollow noreferrer noopener"><div class="button">QUIZ</div></a>
         </div>
         <footer>
