--- a/gold/index.html
+++ b/gold/index.html
@@ -18,8 +18,8 @@
             <a href="standards.html"><div class="button">The Gold Standard vs The Silver Standard</div></a>
         </div>
         <div class="buttonGroup center">
-            <div class="button">Activity 1</div>
-            <div class="button">Activity 2</div>
+            <a href="https://quizlet.com/587248288/match" target="_blank" rel="nofollow noreferrer noopener"><div class="button">Activity 1</div></a>
+            <a href="act2.html"><div class="button">Activity 2</div></a>
             <a href="https://www.flexiquiz.com/SC/N/db281a46-5505-4e11-b49f-e3495af9d181" target="_blank" rel="nofollow noreferrer noopener"><div class="button">QUIZ</div></a>
         </div>
         <footer>
