--- a/spike/index.html
+++ b/spike/index.html
@@ -20,8 +20,8 @@
             <a href="father_of_semo.html"><div class="button">Part 3: The Father of Southeast Missouri</div></a>
         </div>
         <div class="buttonGroup center">
-            <div class="button">Activity 1</div>
-            <div class="button">Activity 2</div>
+            <a href="https://thewordsearch.com/puzzle/2254024/louis-houck-and-the-railroad/" target="_blank" rel="nofollow noreferrer noopener"><div class="button">Activity 1</div></a>
+            <a href="act2.html"><div class="button">Activity 2</div></a>
             <a href="https://www.flexiquiz.com/SC/N/eafb45ff-80ae-466f-b9a8-e177855cbf26" target="_blank" rel="nofollow noreferrer noopener"><div class="button">QUIZ</div></a>
         </div>
         <footer>
