--- a/compass/index.html
+++ b/compass/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <link rel="shortcut icon" href="../road.png" type="image/png">
-    <title>Immigration and the Railroad | Louis Houck | MO Traveling Trunk</title>
+    <title>Immigration and the Railroad – Louis Houck – MO Traveling Trunk</title>
 </head>
 
 <body>
