--- a/spike/act2.html
+++ b/spike/act2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <link rel="shortcut icon" href="../road.png" type="image/png">
-    <title>Louis Houck and the Railroad Activity 2 | Louis Houck | MO Traveling Trunk</title>
+    <title>Louis Houck and the Railroad Activity 2 – Louis Houck – MO Traveling Trunk</title>
 </head>
 
 <body class="plainText">
