--- a/spike/printer_lawyer.html
+++ b/spike/printer_lawyer.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <link rel="shortcut icon" href="../road.png" type="image/png">
-    <title>Louis Houck: The German Printer and Lawyer | Louis Houck | MO Traveling Trunk</title>
+    <title>Louis Houck: The German Printer and Lawyer – Louis Houck – MO Traveling Trunk</title>
 </head>
 
 <body class="plainText">
