--- a/compass/pop_boom.html
+++ b/compass/pop_boom.html
@@ -46,6 +46,7 @@
             more and more prosperous, property value began to rise, creating an atmosphere that was very
             welcoming and profitable for outsiders.
         </p>
+        <a href="Popl.png"><img class="popTrends" src="Popl.png" alt="Population Trends"></a>
         <footer>
             <a href="index.html">
                 <div class="backPage">« Back</div>
