--- a/spike/father_of_semo.html
+++ b/spike/father_of_semo.html
@@ -63,6 +63,7 @@
             who would control the <em>St. Louis, Cape Girardeau, Ft. Smith Railroad</em>. Houck’s victory was not
             only a personal one, but a victory for Southeast Missouri.
         </p>
+        <a href="STL,CG,FS.png"><img src="STL,CG,FS.png" alt="St. Louis, Cape Girardeau, and Fort Smith Railway"></a>
         <footer>
             <a href="index.html">
                 <div class="backPage">« Back</div>
