--- a/spike/railroad_pioneer.html
+++ b/spike/railroad_pioneer.html
@@ -30,6 +30,15 @@
             line connected with the <em>Cotton Belt Railroad</em>, there was access by railroad from Delta, Missouri
             in the north all the way south to Arkansas.
         </p>
+        <div class="columns">
+            <div class="column halfcolumn vertcenter">
+                <a href="Cottonbelt.png"><img src="Cottonbelt.png" alt="Cotton Belt Route"></a>
+            </div>
+            <div class="column halfcolumn vertcenter">
+                <a href="STL,K,S.png"><img src="STL,K,S.png" alt="St. Louis, Kennett, and Southern Railroad"></a>
+            </div>
+        </div>
+        
         <p>
             The connection of Southeast Missouri to St. Louis by railroad opened up the market for merchants
             in the rural Southeast of Missouri. Rural communities were able to ship raw materials like timber
